Replace as many Guava Immutable collection implementations with Java.util implementations as possible Update stream().collect(Collectors.toList()) to stream.toList() where immutable collections can be used