@@ -20,7 +20,6 @@
 
 package org.monarchinitiative.exomiser.core.analysis;
 
-import com.google.common.collect.ImmutableList;
 import de.charite.compbio.jannovar.annotation.VariantEffect;
 import de.charite.compbio.jannovar.mendel.ModeOfInheritance;
 import de.charite.compbio.jannovar.mendel.SubModeOfInheritance;
@@ -407,7 +406,7 @@ class JobParserTest {
                 .build();
         Analysis analysis = initialiseAnalysisWithStep(analysisStep);
 
-        List<ChromosomalRegion> expectedIntervals = ImmutableList.of(
+        List<ChromosomalRegion> expectedIntervals = List.of(
                 new GeneticInterval(10, 122892600, 122892700),
                 new GeneticInterval(10, 122892900, 122893000)
         );
@@ -526,7 +525,7 @@ class JobParserTest {
                 .build();
 
         AnalysisProto.Analysis protoAnalysis = AnalysisProto.Analysis.newBuilder()
-                .addAllFrequencySources(ImmutableList.of("THOUSAND_GENOMES", "TOPMED"))
+                .addAllFrequencySources(List.of("THOUSAND_GENOMES", "TOPMED"))
                 .addSteps(analysisStep)
                 .build();
 
@@ -568,7 +567,7 @@ class JobParserTest {
                 .build();
 
         AnalysisProto.Analysis protoAnalysis = AnalysisProto.Analysis.newBuilder()
-                .addAllFrequencySources(ImmutableList.of("THOUSAND_GENOMES", "TOPMED"))
+                .addAllFrequencySources(List.of("THOUSAND_GENOMES", "TOPMED"))
                 .putInheritanceModes("AUTOSOMAL_DOMINANT", 0.1f)
                 .addSteps(analysisStep)
                 .build();
@@ -587,7 +586,7 @@ class JobParserTest {
                 .build();
 
         AnalysisProto.Analysis protoAnalysis = AnalysisProto.Analysis.newBuilder()
-                .addAllFrequencySources(ImmutableList.of("THOUSAND_GENOMES", "TOPMED"))
+                .addAllFrequencySources(List.of("THOUSAND_GENOMES", "TOPMED"))
                 .addSteps(analysisStep)
                 .build();
 
@@ -605,7 +604,7 @@ class JobParserTest {
                 .build();
 
         AnalysisProto.Analysis protoAnalysis = AnalysisProto.Analysis.newBuilder()
-                .addAllFrequencySources(ImmutableList.of("THOUSAND_GENOMES", "TOPMED"))
+                .addAllFrequencySources(List.of("THOUSAND_GENOMES", "TOPMED"))
                 .putInheritanceModes("AUTOSOMAL_DOMINANT", 0.1f)
                 .addSteps(analysisStep)
                 .build();
@@ -624,7 +623,7 @@ class JobParserTest {
                 .build();
 
         AnalysisProto.Analysis protoAnalysis = AnalysisProto.Analysis.newBuilder()
-                .addAllFrequencySources(ImmutableList.of("THOUSAND_GENOMES", "TOPMED"))
+                .addAllFrequencySources(List.of("THOUSAND_GENOMES", "TOPMED"))
                 .putInheritanceModes("AUTOSOMAL_DOMINANT", 0.1f)
                 .addSteps(analysisStep)
                 .build();
