@@ -20,8 +20,6 @@
 
 package org.monarchinitiative.exomiser.core.analysis.util;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.monarchinitiative.exomiser.core.model.ChromosomalRegionIndex;
 import org.monarchinitiative.exomiser.core.model.RegulatoryFeature;
@@ -30,6 +28,8 @@ import org.monarchinitiative.exomiser.core.model.TopologicalDomain;
 import org.monarchinitiative.svart.Variant;
 
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
@@ -47,8 +47,8 @@ public class ChromosomalRegionIndexTest {
         ChromosomalRegionIndex<TopologicalDomain> emptyTopoDomainIndex = ChromosomalRegionIndex.empty();
         ChromosomalRegionIndex<RegulatoryFeature> emptyRegulatoryFeatureIndex = ChromosomalRegionIndex.empty();
 
-        assertThat(emptyTopoDomainIndex.getRegionsContainingVariant(variant), equalTo(ImmutableList.of()));
-        assertThat(emptyRegulatoryFeatureIndex.getRegionsContainingVariant(variant), equalTo(ImmutableList.of()));
+        assertThat(emptyTopoDomainIndex.getRegionsContainingVariant(variant), equalTo(List.of()));
+        assertThat(emptyRegulatoryFeatureIndex.getRegionsContainingVariant(variant), equalTo(List.of()));
 
         assertThat(emptyRegulatoryFeatureIndex.hasRegionContainingVariant(variant), is(false));
         assertThat(emptyTopoDomainIndex.hasRegionContainingVariant(variant), is(false));
@@ -56,18 +56,18 @@ public class ChromosomalRegionIndexTest {
 
     @Test
     public void emptyListIntoOfConstructor() {
-        ChromosomalRegionIndex<RegulatoryFeature> empty = ChromosomalRegionIndex.of(ImmutableList.of());
+        ChromosomalRegionIndex<RegulatoryFeature> empty = ChromosomalRegionIndex.of(List.of());
     }
 
     @Test
     public void multipleRegionsInChromosomes() {
-        TopologicalDomain region1 = new TopologicalDomain(1, 1, 100, ImmutableMap.of());
-        TopologicalDomain region2 = new TopologicalDomain(1, 150, 300, ImmutableMap.of());
-        TopologicalDomain region3 = new TopologicalDomain(1, 250, 350, ImmutableMap.of());
-        TopologicalDomain region4 = new TopologicalDomain(1, 400, 500, ImmutableMap.of());
-        TopologicalDomain region5 = new TopologicalDomain(2, 600, 800, ImmutableMap.of());
+        TopologicalDomain region1 = new TopologicalDomain(1, 1, 100, Map.of());
+        TopologicalDomain region2 = new TopologicalDomain(1, 150, 300, Map.of());
+        TopologicalDomain region3 = new TopologicalDomain(1, 250, 350, Map.of());
+        TopologicalDomain region4 = new TopologicalDomain(1, 400, 500, Map.of());
+        TopologicalDomain region5 = new TopologicalDomain(2, 600, 800, Map.of());
 
-        ImmutableList<TopologicalDomain> chromosomalRegions = ImmutableList.of(region1, region2, region3, region4, region5);
+        List<TopologicalDomain> chromosomalRegions = List.of(region1, region2, region3, region4, region5);
 
         ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(chromosomalRegions);
 
@@ -76,27 +76,27 @@ public class ChromosomalRegionIndexTest {
 
     @Test
     public void testGetTadsContainingVariantSingleTad() {
-        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
-        assertThat(instance.getRegionsContainingVariant(variant), equalTo(ImmutableList.of(tad)));
+        assertThat(instance.getRegionsContainingVariant(variant), equalTo(List.of(tad)));
         assertThat(instance.hasRegionContainingVariant(variant), is(true));
     }
 
     @Test
     public void testGetTadsContainingVariantSingleTadVariantNotInTad() {
-        TopologicalDomain tad = new TopologicalDomain(1, 1, 10, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 1, 10, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
-        assertThat(instance.getRegionsContainingVariant(variant), equalTo(ImmutableList.of()));
+        assertThat(instance.getRegionsContainingVariant(variant), equalTo(List.of()));
         assertThat(instance.hasRegionContainingVariant(variant), is(false));
         assertThat(instance.hasRegionContainingPosition(variant.contigId(), variant.start()), is(false));
     }
 
     @Test
     public void testRegionContainingPositionSingleTad() {
-        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
         assertThat(instance.hasRegionContainingPosition(1, 2), is(true));
         assertThat(instance.hasRegionContainingPosition(2, 2), is(false));
@@ -104,8 +104,8 @@ public class ChromosomalRegionIndexTest {
 
     @Test
     public void testGetTadsContainingVariantSingleTadVariantNotInChromosomeIndex() {
-        TopologicalDomain tad = new TopologicalDomain(1, 1, 10, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 1, 10, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
         assertThat(instance.getRegionsContainingVariant(SimpleVariantCoordinates.of(100, 50, "A", "T")), equalTo(Collections
                 .emptyList()));
@@ -113,69 +113,69 @@ public class ChromosomalRegionIndexTest {
 
     @Test
     public void testGetTadsContainingPositionPositionOneBeforeStartOfRegion() {
-        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
-        assertThat(instance.getRegionsOverlappingPosition(1, 9), equalTo(ImmutableList.of()));
+        assertThat(instance.getRegionsOverlappingPosition(1, 9), equalTo(List.of()));
     }
 
     @Test
     public void testGetTadsContainingPositionPositionAtStartOfRegion() {
-        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
-        assertThat(instance.getRegionsOverlappingPosition(1, 10), equalTo(ImmutableList.of(tad)));
+        assertThat(instance.getRegionsOverlappingPosition(1, 10), equalTo(List.of(tad)));
     }
 
     @Test
     public void testGetTadsContainingPositionPositionMiddleOfRegion() {
-        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
-        assertThat(instance.getRegionsOverlappingPosition(1, 11), equalTo(ImmutableList.of(tad)));
+        assertThat(instance.getRegionsOverlappingPosition(1, 11), equalTo(List.of(tad)));
     }
 
     @Test
     public void testGetTadsContainingPositionPositionAtEndOfRegion() {
-        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
-        assertThat(instance.getRegionsOverlappingPosition(1, 12), equalTo(ImmutableList.of(tad)));
+        assertThat(instance.getRegionsOverlappingPosition(1, 12), equalTo(List.of(tad)));
     }
 
     @Test
     public void testGetTadsContainingPositionPositionOneAfterEndOfRegion() {
-        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad));
+        TopologicalDomain tad = new TopologicalDomain(1, 10, 12, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad));
 
-        assertThat(instance.getRegionsOverlappingPosition(1, 13), equalTo(ImmutableList.of()));
+        assertThat(instance.getRegionsOverlappingPosition(1, 13), equalTo(List.of()));
     }
 
     @Test
     public void testGetTadsContainingVariantTwoNonOverlappingTads() {
-        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, ImmutableMap.of());
-        TopologicalDomain tad1 = new TopologicalDomain(2, 200, 300, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad, tad1));
+        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, Map.of());
+        TopologicalDomain tad1 = new TopologicalDomain(2, 200, 300, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad, tad1));
 
-        assertThat(instance.getRegionsContainingVariant(variant), equalTo(ImmutableList.of(tad)));
+        assertThat(instance.getRegionsContainingVariant(variant), equalTo(List.of(tad)));
     }
 
     @Test
     public void testGetTadsContainingVariantTwoOverlappingTadsVariantInBoth() {
-        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, ImmutableMap.of());
-        TopologicalDomain tad1 = new TopologicalDomain(1, 25, 75, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad, tad1));
+        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, Map.of());
+        TopologicalDomain tad1 = new TopologicalDomain(1, 25, 75, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad, tad1));
 
-        assertThat(instance.getRegionsContainingVariant(variant), equalTo(ImmutableList.of(tad, tad1)));
+        assertThat(instance.getRegionsContainingVariant(variant), equalTo(List.of(tad, tad1)));
     }
 
     @Test
     public void testGetTadsContainingVariantTwoOverlappingTadsVariantInOne() {
-        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, ImmutableMap.of());
-        TopologicalDomain tad1 = new TopologicalDomain(1, 75, 200, ImmutableMap.of());
-        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(ImmutableList.of(tad, tad1));
+        TopologicalDomain tad = new TopologicalDomain(1, 1, 100, Map.of());
+        TopologicalDomain tad1 = new TopologicalDomain(1, 75, 200, Map.of());
+        ChromosomalRegionIndex<TopologicalDomain> instance = ChromosomalRegionIndex.of(List.of(tad, tad1));
 
-        assertThat(instance.getRegionsContainingVariant(variant), equalTo(ImmutableList.of(tad)));
+        assertThat(instance.getRegionsContainingVariant(variant), equalTo(List.of(tad)));
     }
 
 }
